<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/przycisk3"
    tools:context=".PlynnoscActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/zobowiazania_ogolem"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/zadluzenie_zobowiazania_text"
            android:ems="10"
            android:inputType="numberSigned"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/aktywa_ogolem"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/zadluzenie_aktywa_text"
            android:ems="10"
            android:textColor="@color/white"
            android:inputType="numberSigned"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/kapital_wlasny"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/zadluzenie_kapital_text"
            android:ems="10"
            android:textColor="@color/white"
            android:inputType="numberSigned"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/oblicz"
        android:onClick="onClickObliczZadluzenie"/>

    <TextView
        android:id="@+id/zadluzenie_zadluzenie_text"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:text="@string/srodki_pieniezne"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/zadluzenie_finansowanie_text"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:text="@string/srodki_pieniezne"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />

</LinearLayout>